--- a/ApnaCollege/helloworld.html
+++ b/ApnaCollege/helloworld.html
@@ -98,13 +98,13 @@
                 <option value="cs">Communication Systems</option>
             </select>
             <br><br>
-            <label for="email">Enter your email</label>
+            <label for="email">Enter your email : </label>
             <input type="email" id="email" placeholder="Enter your email">
             <br><br>
-            <label for="phone">Enter your Contact number </label>
+            <label for="phone">Enter your Contact number : </label>
             <input type="number" id="phone" placeholder="Ph No.">
             <br><br>
-            <label>Select you gender</label>
+            <label>Select you gender : </label>
             <input type="radio" name="gender" id="Male" value="male">
             <label for="Male">Male</label>
             <input type="radio" name="gender" id="Female" value="female">
