--- a/ApnaCollege/helloworld.html
+++ b/ApnaCollege/helloworld.html
@@ -83,11 +83,12 @@
         </table>
     </section>
     <section>
+        <h3>Want to work with me on a project ? Fill out this form</h3>
         <form>
-            <h3>Want to work with me on a project ? Fill out this form</h3>
+
             <label for="name">Full Name : </label>
             <input type="text" placeholder="Enter your Full Name" name="name" id="name">
-            <br><br>
+
             <label for="project">In what field do you want to work on a project with me?</label>
             <select id="project" name="project">
                 <option value="Software">Software(JAVA)</option>
@@ -97,39 +98,41 @@
                 <option value="Embedded">Embedded Systems</option>
                 <option value="cs">Communication Systems</option>
             </select>
-            <br><br>
+
             <label for="email">Enter your email : </label>
             <input type="email" id="email" placeholder="Enter your email">
-            <br><br>
+
             <label for="phone">Enter your Contact number : </label>
             <input type="number" id="phone" placeholder="Ph No.">
-            <br><br>
+
             <label>Select you gender : </label>
+
             <input type="radio" name="gender" id="Male" value="male">
             <label for="Male">Male</label>
             <input type="radio" name="gender" id="Female" value="female">
             <label for="Female">Female</label>
-            <br><br>
+
+            <br>
             <label for="color">Pick your skin color : </label>
             <input type="color" id="color" name="color">
-            <br><br>
+
             <label for="income">Upload your family income certificate : </label>
             <input type="file" id="income" name="income">
-            <br><br>
+
             <label for="religion">Enter your religion : </label>
             <input type='text' id="religion" name="religion" placeholder="Enter here">
-            <br><br>
+
             <input type="checkbox" id="terms" name="terms">
             <label for="terms">I agree and acknowledge that I will be judged by Uby based on my input</label>
-            <br><br>
+
             <button type="submit">Submit</button>
-            <br><br>
+
         </form>
     </section>
     </main>
     <!--Is it necessary to comment on everything?? Uhmmm, No, I am not Kan____ Ra____ -->
     <br>
-    <footer>
+    <footer id="footer">
     <p><b>Contact Me : </b><u>+00 299792458</u></p>
     <p>Made with hate &#128545; by Uby Zargam</p>
     </footer>
