--- a/ApnaCollege/helloworld.html
+++ b/ApnaCollege/helloworld.html
@@ -169,6 +169,11 @@
             </div>
         </div>
     </div>
+
+    <p>New stuff coming soon...... Keep Calm</p>
+    <div id="load">
+        <div id="loader"></div>
+    </div>
     <footer id="footer">
     <p><b>Contact Me : </b><u>+00 299792458</u></p>
     <p>Made with hate &#128545; by Uby Zargam</p>
