--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -131,7 +131,7 @@
             <div id="exp1">
                 <div id="exphead">
                     <div id="expheadyear">2023-Present</div>
-                    <div id="expheadtitle">AuMDS recognised freelancer</div>
+                    <div id="expheadtitle">AuMDS freelancer</div>
                 </div>
                 <div id="expinfo">
                     <div id="expinfotitle">Freelancer</div>
