--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -244,5 +244,16 @@
         </section>
     </div>
 
+    <div id="skillssectiondiv">
+    <div id="skillssectionheading">Skills</div>
+    <section id="skillssection">
+        <div id="skillssectioncomphard">
+            Hardware Skills (Electronics skills)
+        </div>
+        <div id="skillssectioncompsoft">
+            Software Skills (Computer Skills)
+        </div>
+    </section>
+</div>
 </body>
 </html>
