--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
 
@@ -117,56 +118,34 @@
         </div>
     </section>
 
-    <div id="expdiv">
-    <section id="exp">
-        <div id="anim">
-            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-
-             <dotlottie-player src="https://lottie.host/a87d1cd5-d9ff-476b-a3c5-76f9be647e01/DrNbz5OQs5.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
-            </dotlottie-player>
-
-        </div>
-        <div id="expdesc">
-            <div id="expdeschead">My Experience</div>
-            <div id="exp1">
-                <div id="exphead">
-                    <div id="expheadyear">2023-Present</div>
-                    <div id="expheadtitle">AuMDS freelancer</div>
+    <div id="skillssectionouterdiv">
+    <div id="skillssectiondiv">
+        <div id="skillssectionheading">Skills</div>
+        <section id="skillssection">
+            <div id="skillssectioncomp">
+                <div id="skillssectionlogo" class="material-symbols-outlined">
+                    memory
                 </div>
-                <div id="expinfo">
-                    <div id="expinfotitle">Freelancer</div>
-                    <div id="expinfoinfo">I pick up contract based projects related to website creation using 
-                        WordPress, and designing websites using Figma.
-                    </div>
+                <div id="skillssectionskills">
+                    <div class="skillsectionskill">Digital VLSI Design</div>
+                    <div class="skillsectionskill">Verilog (HDL)</div>
+                    <div class="skillsectionskill">Embedded System Design</div>
+                    <div class="skillsectionskill">PCB Design</div>
                 </div>
             </div>
-            <div id="exp1">
-                <div id="exphead">
-                    <div id="expheadyear">2023-Present</div>
-                    <div id="expheadtitle">Mmerak</div>
+            <div id="skillssectioncomp">
+                <div id="skillssectionlogo" class="material-symbols-outlined">
+                    developer_mode_tv
                 </div>
-                <div id="expinfo">
-                    <div id="expinfotitle">Social Media Marketing Intern</div>
-                    <div id="expinfoinfo">I am responsible for handling of LinkedIn page of the company
-                         and content research part.
-                    </div>
-                </div>
-            </div>
-            <div id="exp1">
-                <div id="exphead">
-                    <div id="expheadyear">2022 (2Months)</div>
-                    <div id="expheadtitle">Avalon Scenes</div>
-                </div>
-                <div id="expinfo">
-                    <div id="expinfotitle">Customer Onboarding Specialist</div>
-                    <div id="expinfoinfo">I was a part of an amazing team and worked together to 
-                        get customers onboard through marketing by creating videos specific to 
-                        the company and cold mailing them.
-                    </div>
+                <div id="skillssectionskills">
+                    <div class="skillsectionskill">Data structures and algorithms</div>
+                    <div class="skillsectionskill">Web Development</div>
+                    <div class="skillsectionskill">Web Design (Figma)</div>
+                    <div class="skillsectionskill">C, C++, JAVA, Python</div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     </div>
 
     <div id="edu">
@@ -187,6 +166,58 @@
         </div>
     </section>
     </div>
+
+    <div id="expdiv">
+        <section id="exp">
+            <div id="anim">
+                <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+    
+                 <dotlottie-player src="https://lottie.host/a87d1cd5-d9ff-476b-a3c5-76f9be647e01/DrNbz5OQs5.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                </dotlottie-player>
+    
+            </div>
+            <div id="expdesc">
+                <div id="expdeschead">My Experience</div>
+                <div id="exp1">
+                    <div id="exphead">
+                        <div id="expheadyear">2023-Present</div>
+                        <div id="expheadtitle">AuMDS freelancer</div>
+                    </div>
+                    <div id="expinfo">
+                        <div id="expinfotitle">Freelancer</div>
+                        <div id="expinfoinfo">I pick up contract based projects related to website creation using 
+                            WordPress, and designing websites using Figma.
+                        </div>
+                    </div>
+                </div>
+                <div id="exp1">
+                    <div id="exphead">
+                        <div id="expheadyear">2023-Present</div>
+                        <div id="expheadtitle">Mmerak</div>
+                    </div>
+                    <div id="expinfo">
+                        <div id="expinfotitle">Social Media Marketing Intern</div>
+                        <div id="expinfoinfo">I am responsible for handling of LinkedIn page of the company
+                             and content research part.
+                        </div>
+                    </div>
+                </div>
+                <div id="exp1">
+                    <div id="exphead">
+                        <div id="expheadyear">2022 (2Months)</div>
+                        <div id="expheadtitle">Avalon Scenes</div>
+                    </div>
+                    <div id="expinfo">
+                        <div id="expinfotitle">Customer Onboarding Specialist</div>
+                        <div id="expinfoinfo">I was a part of an amazing team and worked together to 
+                            get customers onboard through marketing by creating videos specific to 
+                            the company and cold mailing them.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </div>
 
     <div id="profilesdiv">
         <div id="headinfo">My Profiles</div>
@@ -244,16 +275,37 @@
         </section>
     </div>
 
-    <div id="skillssectiondiv">
-    <div id="skillssectionheading">Skills</div>
-    <section id="skillssection">
-        <div id="skillssectioncomphard">
-            Hardware Skills (Electronics skills)
+        <div id="projectdivouter">
+    <div id="projectdiv">
+        <div id="projectdivheading">Projects </div>
+        <div id="projectdivheadingcontainer">
+            <div id="projectheading">Design and Development of Interactive website for placements</div>
+            <div id="projectinformation">The aim is to help students and make the placement process easier.
+                 The website offers several features to make the placement process simple and easy.
+            </div>
         </div>
-        <div id="skillssectioncompsoft">
-            Software Skills (Computer Skills)
+        <div id="projectdivheadingcontainer">
+            <div id="projectheading">Portfolio website</div>
+            <div id="projectinformation">Working on making my portfolio website using HTML, CSS and JavaScript. 
+                The design of the website before development is made on Figma.The website will be hosted on web by the month of May 2024.
+            </div>
         </div>
-    </section>
+        <div id="projectdivheadingcontainer">
+            <div id="projectheading">Intelligent and Smart Pad dispenser</div>
+            <div id="projectinformation">Me and my team of 3 members excluding me are working on design and development of automatic pad dispenser.
+            </div>
+        </div>
+        <div id="projectdivheadingcontainer">
+            <div id="projectheading">
+                Design of RF Chip for wideband Digital Receivers and jammer signal processing unit and RF Front-End Subsystems 
+                for SWaP and cooling optimisation purpose.</div>
+            <div id="projectinformation">The project is to design a radio-frequency receiver using concepts of RF, analog desing, VLSI Design. The 
+                designed receiver must be a digital signal processing unit (Soc) containing filters, mixers, local oscillators, Low noise amplifiers,
+                ADC, DAC and other components.
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
